--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -4,8 +4,9 @@ body {
 }
 #container {
     position: relative;
-    background-color: white;
+    color: black;
     width: 80%;
+    min-width: 680px;
     margin: 0 auto;
 }
 header {
@@ -15,6 +16,30 @@ main {
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
+#sampleUserInput {
+    width: 40rem;
+    height: 3rem;
+    --inline-height: 3rem;
+    padding-inline-start: 1.5rem;
+    padding-inline-end: 1.5rem;
+    border: 2px solid black;
+    border-radius: calc(0.5 * var(--inline-height));
+}
+main form .convert-btn {
+    height: 3rem;
+    border-radius: 50%;
+    background-color: white;
+    transition: background-color ease 0.3s;
+}
+main form .convert-btn:hover {
+    background-color: lightgray;
+    cursor: pointer;
+}
+main a { font-weight:bold; transition: all ease .3s; }
+main a:link { color: #006666; }
+main a:hover { text-shadow: 1px 1px 0px #fff, 2px 2px 2px #966; }
+main a:visited { color: #666600; }
+main a:active { color: #660066; }
 footer {
     border-top: 1px solid gray;
 }
