--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -1,45 +1,60 @@
 /* style.css */
 body {
-    font-family: "Kameron", "Noto Sans JP", Arial, Helvetica, sans-serif;
+  font-family: "Kameron", "Noto Sans JP", Arial, Helvetica, sans-serif;
 }
+
 #container {
-    position: relative;
-    color: black;
-    width: 80%;
-    min-width: 680px;
-    margin: 0 auto;
+  position: relative;
+  color: black;
+  width: 80%;
+  min-width: 680px;
+  margin: 0 auto;
 }
-header {
-    border-bottom: 1px solid gray;
+#container header {
+  border-bottom: 1px solid gray;
 }
-main {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+#container main {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
+#container main form .convert-btn {
+  height: 3rem;
+  border-radius: 50%;
+  background-color: white;
+  transition: background-color ease 0.3s;
+}
+#container main form .convert-btn:hover {
+  background-color: lightgray;
+  cursor: pointer;
+}
+#container main a {
+  font-weight: bold;
+  transition: all ease 0.3s;
+}
+#container main a:link {
+  color: #006666;
+}
+#container main a:hover {
+  text-shadow: 1px 1px 0px #fff, 2px 2px 2px #966;
+}
+#container main a:visited {
+  color: #666600;
+}
+#container main a:active {
+  color: #660066;
+}
+#container footer {
+  border-top: 1px solid gray;
+}
+
 #sampleUserInput {
-    width: 40rem;
-    height: 3rem;
-    --inline-height: 3rem;
-    padding-inline-start: 1.5rem;
-    padding-inline-end: 1.5rem;
-    border: 2px solid black;
-    border-radius: calc(0.5 * var(--inline-height));
-}
-main form .convert-btn {
-    height: 3rem;
-    border-radius: 50%;
-    background-color: white;
-    transition: background-color ease 0.3s;
-}
-main form .convert-btn:hover {
-    background-color: lightgray;
-    cursor: pointer;
-}
-main a { font-weight:bold; transition: all ease .3s; }
-main a:link { color: #006666; }
-main a:hover { text-shadow: 1px 1px 0px #fff, 2px 2px 2px #966; }
-main a:visited { color: #666600; }
-main a:active { color: #660066; }
-footer {
-    border-top: 1px solid gray;
-}
+  width: 40rem;
+  height: 3rem;
+  --inline-height: 3rem;
+  -webkit-padding-start: 1.5rem;
+          padding-inline-start: 1.5rem;
+  -webkit-padding-end: 1.5rem;
+          padding-inline-end: 1.5rem;
+  border: 2px solid black;
+  border-radius: calc(0.5 * var(--inline-height));
+}/*# sourceMappingURL=style.css.map */
