--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -34,14 +34,46 @@ body {
 #container main a:link {
   color: #006666;
 }
-#container main a:hover {
-  text-shadow: 1px 1px 0px #fff, 2px 2px 2px #966;
-}
 #container main a:visited {
   color: #666600;
 }
 #container main a:active {
   color: #660066;
+}
+#container main .tooltip {
+  position: relative;
+  cursor: pointer;
+}
+#container main .tooltip:hover .tooltip-text {
+  opacity: 1;
+  visibility: visible;
+}
+#container main .tooltip-text {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -35px;
+  display: inline-block;
+  padding: 5px;
+  white-space: nowrap;
+  font-size: 10.5px;
+  line-height: 1.3;
+  background: #333;
+  color: #fff;
+  border-radius: 3px;
+  transition: 0.3s ease-in;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+}
+#container main .tooltip-text:before {
+  content: "";
+  position: absolute;
+  top: -13px;
+  left: 50%;
+  margin-left: -7px;
+  border: 7px solid transparent;
+  border-bottom: 7px solid #333;
 }
 #container footer {
   border-top: 1px solid gray;
