--- a/docs/styles/style.scss
+++ b/docs/styles/style.scss
@@ -28,9 +28,43 @@ body {
             font-weight:bold; 
             transition: all ease .3s;
             &:link { color: #006666; }
-            &:hover { text-shadow: 1px 1px 0px #fff, 2px 2px 2px #966; }
             &:visited { color: #666600; }
             &:active { color: #660066; }
+        }
+        .tooltip {
+            position: relative;
+            cursor: pointer;
+            &:hover .tooltip-text {
+                opacity: 1;
+                visibility: visible;
+            }
+        }
+        .tooltip-text {
+            opacity: 0;
+            visibility: hidden;
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            bottom: -35px;
+            display: inline-block;
+            padding: 5px;
+            white-space: nowrap;
+            font-size: 10.5px;
+            line-height: 1.3;
+            background: #333;
+            color: #fff;
+            border-radius: 3px;
+            transition: 0.3s ease-in;
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+            &:before {
+                content: '';
+                position: absolute;
+                top: -13px;
+                left: 50%;
+                margin-left: -7px;
+                border: 7px solid transparent;
+                border-bottom: 7px solid #333;
+            }
         }
     }
     footer {
