--- a/docs/styles/style.scss
+++ b/docs/styles/style.scss
@@ -26,25 +26,40 @@ body {
             min-width: 90%;
             max-width: 50rem;
             margin-left: 2rem;
-            .user-input {
-                width: 40rem;
-                min-width: 90%;
-                height: 3rem;
-                --inline-height: 3rem;
-                padding-inline-start: 1.5rem;
-                padding-inline-end: 1.5rem;
+            .form-ctrl {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: nowrap;
+                justify-content: space-around;
+                align-items: center;
                 border: 2px solid black;
-                border-radius: calc(0.2 * var(--inline-height));
-            }
-            .convert-btn {
-                height: 3rem;
-                border-radius: 50%;
-                background-color: white;
-                transition: background-color ease 0.3s;
-            }
-            .convert-btn:hover {
-                background-color: lightgray;
-                cursor: pointer;
+                border-radius: .3rem;
+                .user-input {
+                    width: 40rem;
+                    min-width: 90%;
+                    height: 3rem;
+                    --inline-height: 3rem;
+                    padding-inline-start: 1.5rem;
+                    padding-inline-end: 1.5rem;
+                    margin: .5rem auto;
+                    border: 0;
+                }
+                .convert-btn {
+                    height: 3rem;
+                    background-color: #aaffaa;
+                    transition: background-color ease 0.3s;
+                    border: 0;
+                    padding: 0.1rem;
+                    margin: .5rem auto;
+                    border: 0;
+                    border-radius: 0.2rem;
+                    &:hover {
+                        background-color: #448844;
+                        color: white;
+                        font-weight: bold;
+                        cursor: pointer;
+                    }
+                }
             }
         }
         a { 
