update docs for append a button to delete userInput

--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -51,6 +51,17 @@ body {
   margin: 0.5rem auto;
   border: 0;
 }
+#container main form .form-ctrl .delete-btn {
+  background-color: inherit;
+  color: gray;
+  font-size: 2rem;
+  border: 0;
+}
+#container main form .form-ctrl .delete-btn:hover {
+  color: rgb(80, 80, 80);
+  font-weight: bold;
+  cursor: pointer;
+}
 #container main form .form-ctrl .convert-btn {
   height: 3rem;
   background-color: #aaffaa;
