--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -18,7 +18,7 @@ body {
   border-bottom: 1px solid gray;
 }
 #container main {
-  height: 300px;
+  height: 24rem;
   background-color: #ffffff;
   opacity: 0.7;
   margin-top: 2rem;
