--- a/docs/styles/style.scss
+++ b/docs/styles/style.scss
@@ -16,7 +16,7 @@ body {
         border-bottom: 1px solid gray;
     }
     main {
-        height: 300px;
+        height: 24rem;
         background-color:#ffffff;
         opacity: 0.7;
         margin-top: 2rem;
