--- a/docs/styles/style.scss
+++ b/docs/styles/style.scss
@@ -25,7 +25,7 @@ body {
         .user-form {
             min-width: 90%;
             max-width: 50rem;
-            margin-left: 2rem;
+            margin: 0 auto;
             .user-form-ctrl {
                 display: flex;
                 flex-direction: row;
