--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -1,4 +1,29 @@
 /* style.css */
+.pace {
+  margin: 0 auto;
+  height: 100%;
+  width: 80%;
+  top: 30vh;
+}
+.pace::after {
+  content: "convert-URL-to-vscode-dev";
+  font-size: 24px;
+  position: absolute;
+  color: #22dd51;
+  z-index: 1000;
+  top: 60px;
+  left: 40px;
+}
+
+.pace-running .container {
+  opacity: 0;
+}
+
+.pace-done .container {
+  transition: opacity 3s;
+  opacity: 1;
+}
+
 body {
   font-family: "Kameron", "Noto Sans JP", Arial, Helvetica, sans-serif;
   height: 100vh;
